bzr-builddeb (2.7.4) UNRELEASED; urgency=low

  * In 'bzr merge-usptream', don't ignore upstream branch when upstream
    version can not be found.  LP: #772424

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 28 Apr 2011 16:50:38 +0200

bzr-builddeb (2.7.3) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Avoid opening upstream branch when it is not necessary. LP: #730589
  * Retrieve the upstream branch URL from Launchpad in 'bzr merge-upstream'
    if --launchpad is specified. LP: #726460
  * Fix merge of bz2 upstream tarballs. LP: #737012

  [ Max Bowsher ]
  * Do not error if the top changelog entry is not a recognized Debian or
  Ubuntu upload target.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 18 Apr 2011 23:17:34 +0200

bzr-builddeb (2.7.2) unstable; urgency=high

  [ Andrew Mitchell ]
  * Add upstream/ directory to setup.py. Closes: #618380. LP: #735147

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 14 Mar 2011 23:27:25 +0100

bzr-builddeb (2.7.1) unstable; urgency=low

  * Add Ubuntu oneiric and Debian wheezy to the list of supported
    distributions.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 11 Mar 2011 11:18:52 +0100

bzr-builddeb (2.7) unstable; urgency=low

  [ James Westby ]

  * Accept None as a valid previous_version value in merge_upstream().
    LP: #680945

  [ Jelmer Vernooij ]

  * Support 'bzr tags --sort=debversion'. Closes: #701244.
  * When adding a changelog entry, support git and svn snapshots.
  * Automatically use debian/source/format if package is native. Closes:
    #586617
  * Fix "bzr builddeb" if last upload was not to a Ubuntu release pocket.
    LP: #709263
  * If possible use uscan to find the latest upstream version string.
    LP: #295274
  * Add --snapshot option to merge-upstream.
  * 'bzr merge-upstream' now also works in merge mode, and will simply
    add a new entry for new upstream versions.
  * merge-upstream will now keep epochs around. LP: #622678